force-app/main/default/objects/walnut__Demo_Session_Data__c/walnut__Demo_Session_Data__c.object-meta.xml
<CustomObject>
    <label>Demo view details</label>
    <nameField>
        <label>Demo view name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo view details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>