force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Account__c.field-meta.xml
<CustomField>
    <fullName>walnut__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Walnut demo activities</relationshipLabel>
    <relationshipName>Demo_Session_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>