force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Contact__c.field-meta.xml
<CustomField>
    <fullName>walnut__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Walnut demo activities</relationshipLabel>
    <relationshipName>Demo_Session_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>