force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>walnut__Contact_Email__c</fullName>
    <formula>walnut__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>