force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>walnut__Contact_Title__c</fullName>
    <formula>walnut__Contact__r.Title</formula>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>