force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Data__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Data__c</fullName>
    <label>Walnut demo activity</label>
    <referenceTo>walnut__Demo_Data__c</referenceTo>
    <relationshipLabel>Demo view details</relationshipLabel>
    <relationshipName>Demo_Session_Datas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>