force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Last_Screen_Number__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Last_Screen_Number__c</fullName>
    <label>Last screen number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>