force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Last_Section_Visited__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Last_Section_Visited__c</fullName>
    <label>Last section visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>