force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Last_Visited__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Last_Visited__c</fullName>
    <label>Time last demo viewed</label>
    <type>DateTime</type>
</CustomField>