force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Link__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Link__c</fullName>
    <label>Demo link</label>
    <type>Url</type>
</CustomField>