force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Name__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Name__c</fullName>
    <label>Demo name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>