force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Screen_Completion__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Screen_Completion__c</fullName>
    <label>Screen completion rate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>