force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_Session_Length__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Session_Length__c</fullName>
    <label>Demo view length (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>