force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Demo_session_started_at__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_session_started_at__c</fullName>
    <label>Demo session started at</label>
    <type>DateTime</type>
</CustomField>