force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Last_Guide_Shown__c.field-meta.xml
<CustomField>
    <fullName>walnut__Last_Guide_Shown__c</fullName>
    <label>Last guide viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>