force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>walnut__Opportunity_Stage__c</fullName>
    <label>Opportunity stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>