force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Sections_Viewed__c.field-meta.xml
<CustomField>
    <fullName>walnut__Sections_Viewed__c</fullName>
    <label>Sections viewed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>