force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>walnut__Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>