force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__User_agent_Info__c.field-meta.xml
<CustomField>
    <fullName>walnut__User_agent_Info__c</fullName>
    <label>User agent info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>