force-app/main/default/objects/walnut__Demo_Session_Data__c/fields/walnut__User_Email__c.field-meta.xml
<CustomField>
    <fullName>walnut__User_Email__c</fullName>
    <label>User email</label>
    <type>Email</type>
</CustomField>