force-app/main/default/objects/walnut__Demo_Session_Data__c/listViews/walnut__All.listView-meta.xml
<ListView>
    <fullName>walnut__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>